--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,6 @@ bson = "2.10"
 bytes = "1.6"
 thiserror = "1.0"
 anyhow = "1.0"
+clap = { version = "4.5", features = ["derive", "env"] }
+dotenvy = "0.15"
+tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-serde_json-1"] }
