--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ anyhow = "1.0"
 clap = { version = "4.5", features = ["derive", "env"] }
 dotenvy = "0.15"
 tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-serde_json-1"] }
+rand = "0.8"
 
 [dev-dependencies]
 tokio = { version = "1.39", features = ["full"] }
