--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ clap = { version = "4.5", features = ["derive", "env"] }
 dotenvy = "0.15"
 tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-serde_json-1"] }
 rand = "0.8"
+deadpool-postgres = { version = "0.10", features = ["rt_tokio_1"] }
 
 [dev-dependencies]
 tokio = { version = "1.39", features = ["full"] }
