feat: comprehensive shadow mode improvements
- Add comprehensive namespace rewriting for all MongoDB commands
  - Rewrites $db field to <prefix>_<db>
  - Handles collection name fields: find, insert, update, delete, aggregate, create, drop, createIndexes, dropIndexes
  - Rewrites namespace fields: getMore.collection, killCursors.collection
  - Supports nested fields: createIndexes.indexes[].ns
  - 7 unit tests covering all scenarios

- Add OP_COMPRESSED support with Snappy compression
  - OpCompressed struct for parsing/encoding OP_COMPRESSED messages
  - compress_snappy() and decompress_op_compressed() functions
  - encode_op_compressed() and decode_op_compressed_reply() functions
  - 4 unit tests for roundtrip, encoding, decoding

- Update shadow forwarder to use new rewrite utilities
  - OP_MSG: Uses comprehensive namespace rewriting
  - OP_QUERY: Rewrites fullCollectionName
  - OP_COMPRESSED: Decompresses, rewrites inner payload, recompresses

- Add new modules: namespace, aggregation, translate
- Update documentation in docs/shadow.md

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ dotenvy = "0.15"
 tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-serde_json-1"] }
 rand = "0.8"
 deadpool-postgres = { version = "0.10", features = ["rt_tokio_1"] }
+snap = "1.1"
 
 [dev-dependencies]
 tokio = { version = "1.39", features = ["full"] }
