feat: implement remaining shadow mode improvements
- Add e2e coverage for getMore/killCursors/listDatabases/listCollections/listIndexes
  - New test file: tests/server_shadow_list_cursors_e2e.rs
  - Tests listIndexes, getMore/killCursors with shadow mode and db_prefix

- Implement zlib/zstd OP_COMPRESSED support
  - Add flate2 and zstd dependencies
  - Update decompress_op_compressed() to support all three compressors
  - Add compress_data(), compress_zlib(), compress_zstd() functions
  - Add 5 new unit tests for zlib and zstd compression/decompression

- Add metrics exposure via admin command
  - New oxidedbShadowMetrics admin command
  - Returns shadow counters: attempts, matches, mismatches, timeouts
  - New test file: tests/server_metrics_e2e.rs

- Add deterministic sampling for shadow
  - New deterministic_sampling config option
  - Add should_sample_deterministically() function using hash-based sampling
  - Uses request_id + db for deterministic hash
  - New test file: tests/deterministic_sampling_test.rs (6 tests)

- Add upstream auth config fields
  - Added username and password fields to ShadowConfig
  - Configurable via TOML config file

All 41 tests pass.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-serde_json-
 rand = "0.8"
 deadpool-postgres = { version = "0.10", features = ["rt_tokio_1"] }
 snap = "1.1"
+flate2 = "1.0"
+zstd = "0.13"
 
 [dev-dependencies]
 tokio = { version = "1.39", features = ["full"] }
