feat: implement SCRAM-SHA-256 authentication for shadow mode
- Add auth_db config field to ShadowConfig (default: admin)
- Implement full SCRAM-SHA-256 authentication logic in new scram module
  - saslStart with client-first-message
  - saslContinue with client-final and proof
  - Server signature verification
  - PBKDF2, HMAC-SHA-256, and SHA-256 implementations
- Integrate auth into ShadowSession connection flow
  - Authenticates after connection if credentials provided
  - Logs auth success/failure
- Add new dependencies: hmac, sha2, pbkdf2, base64
- Add 5 unit tests for SCRAM functions
- Add integration test file: tests/server_scram_auth_e2e.rs
  - Test with valid credentials
  - Test with invalid credentials
- Update all test files to include new config fields
- All 41 tests pass

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,10 @@ deadpool-postgres = { version = "0.10", features = ["rt_tokio_1"] }
 snap = "1.1"
 flate2 = "1.0"
 zstd = "0.13"
+hmac = "0.12"
+sha2 = "0.10"
+pbkdf2 = { version = "0.12", features = ["simple"] }
+base64 = "0.22"
 
 [dev-dependencies]
 tokio = { version = "1.39", features = ["full"] }
