feat: implement TLS support for shadow upstream connections
- Add TLS config fields to ShadowConfig:
  - tls_enabled: enable TLS connections
  - tls_ca_file: custom CA certificate file
  - tls_client_cert: client certificate file
  - tls_client_key: client private key file
  - tls_allow_invalid_certs: allow invalid certs (dev only)
- Add tokio-rustls and rustls-pemfile dependencies
- Create new tls module (src/tls.rs):
  - build_tls_connector(): creates TLS connector from config
  - connect_tls(): connects to upstream with TLS
  - Support for custom CA certs and client certificates
  - Uses webpki-roots for system root certificates
- Update all test files to include new TLS config fields
- All 41 tests pass

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,9 @@ hmac = "0.12"
 sha2 = "0.10"
 pbkdf2 = { version = "0.12", features = ["simple"] }
 base64 = "0.22"
+tokio-rustls = "0.26"
+rustls-pemfile = "2.0"
+webpki-roots = "0.26"
 
 [dev-dependencies]
 tokio = { version = "1.39", features = ["full"] }
