feat: add comprehensive performance benchmarking suite
- Add Criterion-based benchmarks for insert, find, and aggregate operations
- Create benchmark runner script (run_benchmarks.sh) with report generation
- Benchmark configurations for different document sizes and collection sizes
- Test various query operators (, , , complex filters)
- Test aggregation stages (, , , , )
- Generate markdown reports with timing statistics and throughput metrics
- Export results to JSON for further analysis

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,3 +33,16 @@ webpki-roots = "0.26"
 [dev-dependencies]
 tokio = { version = "1.39", features = ["full"] }
 rand = "0.8"
+criterion = { version = "0.5", features = ["async_tokio"] }
+
+[[bench]]
+name = "insert_benchmark"
+harness = false
+
+[[bench]]
+name = "find_benchmark"
+harness = false
+
+[[bench]]
+name = "aggregate_benchmark"
+harness = false
