feat: implement MongoDB-compatible transaction support
- Add src/session.rs with Session and SessionManager
- Implement logical session IDs (lsid) and transaction numbers
- Support startTransaction, commitTransaction, abortTransaction commands
- Integrate with PostgreSQL transactions for ACID guarantees
- Implement retryable writes with idempotency tracking
- Add session cleanup and timeout handling
- Support autocommit: false semantics
- Add comprehensive transaction tests (7 tests)

Transaction features:
- Multi-document ACID transactions
- Read-your-writes guarantee
- Session isolation
- Transaction timeout (5 minutes)
- Proper MongoDB error codes (13, 20, 251, 211)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ base64 = "0.22"
 tokio-rustls = "0.26"
 rustls-pemfile = "2.0"
 webpki-roots = "0.26"
+uuid = { version = "1.10", features = ["v4", "serde"] }
 
 [dev-dependencies]
 tokio = { version = "1.39", features = ["full"] }
