--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,27 @@
 /target
 .env
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Test artifacts
+*.log
+/test-results
+
+# Node modules (for driver tests)
+node_modules/
+package-lock.json
+
+# Go modules (for driver tests)
+go.sum
+
+# mdBook build output
+docs/book/book/
